add start.sh & code refactor